fixed jump ,added: projectiles , sprint ,limit for projectile and sprint , auto regen ,auto projectile deletion

--- a/gameStyle.css
+++ b/gameStyle.css
@@ -17,3 +17,6 @@ max-height: 100%;
 
 
 }
+img{
+    display: none;
+}
